HW#9/css/style.css
/* ... */
.item-cards-slider-mobile {
  display: none;
}

.btn-pagination {
  width: 67px;
  height: 72px;
  position: absolute;
  cursor: pointer;
  background-color: rgba(0, 0, 0, 0);
  filter: drop-shadow(0px 10px 8px rgb(161, 160, 160));
  z-index: 999;
}

.left-btn-pagination {
  top: 32%;
  left: 4.1%;
}

.right-btn-pagination {
  top: 31%;
  left: 91.1%;
}

.item-pagination {
  text-align: center;
  margin-top: 39px;
}

.mentions {
  height: 278px;
  background-color: #FAFAFA;
  padding-top: 56px;
}

.mentions .content-block {
  height: inherit;

}

.mentions .sub-headers-desc {
  text-align: center;
}

.row-mentions {
  margin-top: 50px;
  gap: 8%;
  align-items: baseline;
}

.getupclose {
  height: 483px;
  background: linear-gradient(270deg, rgb(255, 255, 255) 58%, rgba(255, 255, 255, 0.3) 82.14%), url(../assets/img/getupclose-bcg.png);
  background-position: left top;
  background-repeat: no-repeat;
  padding-top: 104px;
  padding-left: 37.6%;
}

.getupclose .content-block {
  height: 280px;
  width: 77.4vw;
  max-width: 532px;
  /* margin: 0 auto; */
}

.getupclose .desc-content {
  margin-top: 33px;
  height: 120px;
}

.getupclose .app-link {
  margin-top: 44px;
}

.footer {
  height: 127px;
  background-color: #00ADEE;
  align-items: center;
  justify-content: space-around;
  padding: 0 2%;
}

.footer-links {
  /* width: 376px; */
  gap: 8%;
  justify-content: space-between;
}

.link-footer {
  font-weight: bold;
  font-size: 16px;
  line-height: 21px;
  color: #FFFFFF;
}

.social-links-footer {
  width: 110px;
  justify-content: space-between;
}

@media (max-width:1400px) {

  .item-cards-slider:nth-child(4) {
    display: none;
  }

  .slider-oursay {
    width: auto;
  }

  .oursay .content-block {
    margin: 0 auto;
  }
}

@media (max-width: 1260px) {
  .head {
    background: linear-gradient(60deg, rgba(244, 246, 249, 1) 43%, rgba(244, 246, 249, 0) 65%), url(../assets/img/head-bcg.png);
    background-repeat: no-repeat;
    background-position: top right;
  }

  .getstarted {
    height: 916px;
    padding-top: 0px;
  }

  .getstarted .content-box {
    margin-top: 80px;
    margin-left: 80px;

  }

  .getstarted .example-box {
    position: absolute;
    top: 277px;
    right: 600px;
  }

  .row-mentions {
    gap: 2.5%;
  }


}

@media (max-width: 1140px) {

  .desc-wahatisdoes {
    width: 60%;
  }

  .getstarted .content-block {
    width: 60%;
  }

  .features {
    height: auto;
  }

  .features .content-block {
    justify-content: space-evenly;
    width: 84.4vw;
  }

  .item-cards-slider:nth-child(5) {
    display: none;
  }

  .oursay .content-block {
    margin: 0 auto;
    width: 70%;
  }

}

@media (max-width:990px) {

  .wahatisdoes {
    height: 1120px;
    background: linear-gradient(270deg, rgba(255, 255, 255, 1) 18%, rgba(255, 255, 255, 0.3) 82.14%), url(../assets/img/whatisdoes-bcg-1440.png);
    background-repeat: no-repeat;
    background-position: bottom left;
    padding-top: 40px;
  }

  .wahatisdoes .headers-desc {
    padding-top: 45px;
  }

  .wahatisdoes .content-block {
    padding-top: 0;
    flex-wrap: wrap-reverse;
  }

  .promo-wahatisdoes {
    margin-top: 60px;
  }

  .desc-wahatisdoes {
    width: 80%;
  }

  .getstarted {
    height: 1048px;
  }

  .getstarted .wrap-items {
    top: 124px;
  }

  .mentions {
    height: auto;
  }

  .row-mentions {
    flex-wrap: wrap;
    gap: 2%;
  }

  .item-mentions {
    margin-right: 150px;
    margin-bottom: 50px;
  }

  .getupclose{
    padding-left: 0;
  }

  .getupclose .content-block {
    margin: 0 auto;
  }

}
/* ... */

